# Cdlab

./: LLVM_Analysis_Explained.md  README.md  index.html
redis_dead_feature_detector/: DEMO.md  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  build.sh  run.sh
redis_dead_feature_detector/config_extractor/: config_status.json
redis_dead_feature_detector/evaluation/: evaluate_redis.sh
redis_dead_feature_detector/guard_mapper/: guard_map.json
redis_dead_feature_detector/src/config_extractor/: config_status.json  extractor.py
redis_dead_feature_detector/src/dead_feature_reporter/: dead_report.json  reporter.py
redis_dead_feature_detector/src/guard_mapper/: mapper.py
redis_dead_feature_detector/src/llvm_passes/: CMakeLists.txt  DeadFeaturePass.cpp
redis_dead_feature_detector/testcases/: tc1_simple_dead_code.c  tc2_macro_guard.c  tc3_dead_function.c  tc4_alive_feature.c  tc5_complex_reachability.c
web_files_archive/: app.js  build-config.js  dead-features.js  evaluation.js  index.html  llvm-analysis.js  sample-project.js  styles.css
